<resources>
    <string name="app_name">RSAnalytics</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>

    <!-- menu_principal_drawer.xml (menu) -->
    <string name="menprindraw_informes">Informes</string>
    <string name="menprindraw_grupo">Grupo</string>
    <string name="menprindraw_notificaciones">Notificaciones</string>

    <!-- Shared Preferences -->
    <string name="archivo_preferencias_key">PREFERENCIAS</string>
    <string name="token_key">TOKEN</string>

    <!-- fragment_login.xml -->
    <string name="fraglog_label_correo">Correo electrónico</string>
    <string name="fraglog_label_contrasenia">Contraseña</string>
    <string name="fraglog_boton_login">Login</string>
    <string name="fraglog_crear_cuenta">¿Aún no te has registrado?</string>
    <string name="fraglog_error_introduzca_correo">Introduzca un correo</string>
    <string name="fraglog_error_introduzca_contrasenia">Introduzca una contraseña</string>
    <string name="fraglog_error_correo_invalido">Introduzca un correo valido</string>
    <string name="fraglog_error_prueba_otra_combinacion">Correo o contraseña incorrectos</string>
    <string name="fraglog_error_inesperado">Ocurrió un error inesperado</string>

    <!-- fragment_registro.xml -->
    <string name="fragreg_label_nombre">Nombre</string>
    <string name="fragreg_label_primer_apellido">Primer Apellido</string>
    <string name="fragreg_label_segundo_apellido">Segundo Apellido</string>
    <string name="fragreg_label_sexo">Sexo</string>
    <string name="fragreg_sexo_masculino">Hombre</string>
    <string name="fragreg_sexo_femenino">Mujer</string>
    <string name="fragreg_label_telefono">Nº de teléfono</string>
    <string name="fragreg_label_correo">Correo electrónico</string>
    <string name="fragreg_label_contrasenia">Contraseña</string>
    <string name="fragreg_label_repetir_contrasenia">Repetir contraseña</string>
    <string name="fragreg_error_introduzca_nombre">Introduzca un nombre válido</string>
    <string name="fragreg_error_introduzca_primer_apellido">Introduzca su primer apellido</string>
    <string name="fragreg_error_introduzca_segundo_apellido">Introduzca su segundo apellido</string>
    <string name="fragreg_error_introduzca_apellido_valido">Introduzca un apellido válido</string>
    <string name="fragreg_error_introduzca_sexo">Seleccione una opción</string>
    <string name="fragreg_error_introduzca_telefono">Introduzca un número de teléfono</string>
    <string name="fragreg_error_introduzca_telefono_valido">Introduzca un número de teléfono válido</string>
    <string name="fragreg_error_introduzca_correo">Introduzca un correo</string>
    <string name="fragreg_error_introduzca_correo_valido">Introduzca un correo válido</string>
    <string name="fragreg_error_introduzca_contrasenia">Introduzca una contraseña</string>
    <string name="fragreg_error_introduzca_contrasenia_valido">La contraseña debe tener: al menos 8 caracteres, una mayúscula, una minúscula, un número y un caracter especial (!@#$%^&amp;*)</string>
    <string name="fragreg_error_introduzca_repetir_contrasenia">Repita la contraseña</string>
    <string name="fragreg_error_introduzca_repetir_contrasenia_concuerden">Las contraseñas no coinciden</string>

    <!-- fragment_notificaciones.xml -->
    <string name="fragnot_adhesion_grupo_exitosa">¡Enhorabuena! Ya eres un miembro del grupo</string>
    <string name="fragnot_rechazo_grupo_exitosa">Se ha rechazado la invitacion exitósamente</string>
    <string name="fragnot_adhesion_grupo_fallida">Ups, no hemos podido añadirle al grupo</string>

    <!-- fragment_informes.xml -->
    <string name="frainf_titulo_permisos_disco">Permisos de escritura/lectura en disco</string>
    <string name="frainf_desc_permisos_disco">Necesitamos los permisos de lectura y escritura para poder almacenar los informes que descargues</string>
    <string name="frainf_desc_inf">Descargando informe...</string>

    <!-- menu_principal.xml -->
    <string name="menuprin_boton_logout">Desconectar</string>

    <!-- sin_notificaciones.xml -->
    <string name="sinnot_ups">¡Vaya! Parece que aún no tienes ninguna notificación</string>
    <string name="sinnot_desliza">(Desliza hacia abajo para recargar)</string>

    <!-- sin_grupo.xml -->
    <string name="singru_ups">No perteneces a ningún grupo</string>
    <string name="singru_crear_grupo">Crear grupo</string>

    <!-- sin_informes.xml -->
    <string name="sininf_ups">¡Comienza generando tu primer informe! ¿A qué esperas?</string>
    <string name="sininf_crear_informe">Solicitar informe</string>

    <!-- detalle_notificacion_informes.xml -->
    <string name="detnotinf_titulo">Informe disponible</string>

    <!-- detalle_notificacion_invitacion_grupo.xml -->
    <string name="detnotinvgrup_titulo">Invitación a grupo</string>
    <string name="detnotinvgrup_aceptar_invitacion">¡Claro!</string>
    <string name="detnotinvgrup_rechazar_invitacion">No, gracias</string>
    <string name="detnotinvgrup_mensaje_adhesion_p1">¡Hola! Soy </string>
    <string name="detnotinvgrup_mensaje_adhesion_p2">, responsable del grupo </string>
    <string name="detnotinvgrup_mensaje_adhesion_p3"> y nos gustaria mucho que te unieras a nosotros. ¿Que opinas?</string>

    <!-- detalle_miembro_grupo.xml -->
    <string name="detmiegru_texto_fecha_p1">Miembro desde el</string>
    <string name="detmiegru_texto_fecha_p2">de</string>

    <!-- detalle_informe.xml -->
    <string name="detinf_titulo">Informe del municipio</string>
    <string name="detinf_texto_fecha_p1">Solicitado el día</string>
    <string name="detinf_texto_fecha_p2">de</string>
    <string name="detinf_texto_fecha_p3">a las</string>

    <!-- dialogo_crear_grupo.xml -->
    <string name="diacregru_nombre_grupo">Nombre del grupo</string>
    <string name="diacregru_crear_grupo">Crear</string>
    <string name="diacregru_caracteres_no_permitidos">Carácteres no válidos</string>
    <string name="diacregru_maximo_caracteres">Máximo 50 carácteres</string>
    <string name="diacregru_introduce_nombre">Introduzca un nombre</string>
    <string name="diacregru_creacion_grupo_exitosa">Se ha creado el grupo exitósamente</string>
    <string name="diacregru_creacion_grupo_fallida">No se ha podido crear el grupo, inténtelo de nuevo más tarde</string>
    <string name="diacregru_existe_nombre_grupo">Ya existe un grupo con ese nombre</string>

    <!-- dialogo_invitacion_grupo.xml -->
    <string name="diainvgru_correo_usuario">Correo del usuario</string>
    <string name="diainvgru_introduce_correo_valido">Introduzca un correo válido</string>
    <string name="diainvgru_enviar_invitacion">Enviar invitación</string>
    <string name="diainvgru_invitacion_exitosa">Se ha invitado al usuario exitósamente</string>
    <string name="diainvgru_invitacion_fallida">No se ha podido invitar al usuario, inténtelo de nuevo más tarde</string>
    <string name="diainvgru_no_existe_usuario">No existe ningún usuario con ese correo</string>

    <!-- dialogo_abandono_grupo.xml -->
    <string name="diaabagru_aviso_miembro">¿Estás seguro de querer abandonar este grupo?</string>
    <string name="diaabagru_aviso_pequenio">(Se eliminará el grupo por completo)</string>
    <string name="diaabagru_abandonar">Abandonar</string>
    <string name="diaabagru_cancelar">Cancelar</string>
    <string name="diaabagru_error_abandono">No se ha podido realizar la acción, inténtelo de nuevo más tarde</string>

    <!-- dialogo_crear_informe.xml -->
    <string name="diacreinf_label_tipo_inmueble">Tipo de inmueble</string>
    <string name="diacreinf_opcion_tipo_inmueble_vivienda">Vivienda</string>

    <string name="diacreinf_label_tipo_contrato">Tipo de contrato</string>
    <string name="diacreinf_opcion_tipo_contrato_compra">Compra</string>
    <string name="diacreinf_opcion_tipo_contrato_alquiler">Alquiler</string>

    <string name="diacreinf_label_municipio">Municipio</string>
    <string name="diacreinf_hint_municipio">Introduzca el municipio</string>
    <string name="diacreinf_solicitar">Solicitar</string>
    <string name="diacreinf_solicitud_exitosa">Se ha realizado la solicitud exitósamente</string>
    <string name="diacreinf_solicitud_fallida">No se podido realizar la solicitud, inténtelo de nuevo más tarde</string>
    <string name="diacreinf_seleccione_opcion">Seleccione una opción</string>
    <string name="diacreinf_seleccione_municipio">Seleccione una de las sugerencias</string>
    <string name="diacreinf_sugerencias_no_disponibles">No hay sugerencias disponible en estos momentos</string>

</resources>
